packages/language/test/fixtures/projects/diagnostics/parse-errors/mixed-gibberish.siren
# EL001 — Random symbols, no structure
!!! syntax error
